--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     min-height: 100vh;
     margin: 0;
     font-family: sans-serif;
+    font-size: 16px;
+    padding: 1rem;
 }
