--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     min-height: 100vh;
     margin: 0;
     font-family: sans-serif;
     font-size: 16px;
-    padding: 1rem;
+    padding: 2rem;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
