--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 200px;
     padding: 2rem;
 }
 
@@ -14,4 +14,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+p {
+    opacity: 0.25;
 }
