--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-* {
-    margin: 0;
-}
-
 body {
     margin: 0;
     font-family: sans-serif;
     font-size: 13vw;
-    padding: 2rem;
+    padding: 1vw;
 }
 
 .container {
@@ -14,8 +10,5 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-p {
     opacity: 0.1;
 }
